--- a/src/ReactGallery.css
+++ b/src/ReactGallery.css
@@ -26,7 +26,7 @@
     transition: all ease-in 1s;
     animation: fadeIn .5s; }
     .ReactGallery__item img {
-      height: 100%;
+      width: 100%;
       -webkit-transition: all ease-in 1s;
       -moz-transition: all ease-in 1s;
       -ms-transition: all ease-in 1s;
@@ -37,6 +37,7 @@
   .ReactGallery .ReactGallery-item__title {
     position: absolute;
     top: 0;
+    left: 0;
     padding: 10px;
     font-size: 2rem;
     z-index: 100;
@@ -45,6 +46,7 @@
   .ReactGallery .ReactGallery-item__details {
     position: absolute;
     bottom: 0;
+    right: 0;
     padding: 10px; }
 
 @keyframes fadeIn {
