--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,441 @@
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+    transform: translateY(5%); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
+@keyframes fadeInFromTop {
+  0% {
+    opacity: 0;
+    transform: translateY(-20%); }
+  100% {
+    opacity: 1;
+    transform: translateY(0); } }
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
-  box-sizing: border-box; }
+  box-sizing: border-box;
+  font-family: "Montserrat", sans-serif;
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0.4); }
+
+body {
+  background-color: #ffffff;
+  margin: 0;
+  padding: 0; }
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #ffffff;
+  background: #000;
+  text-align: center;
+  overflow: hidden; }
+
+section {
+  position: relative;
+  overflow-x: hidden;
+  padding: 80px 0px; }
+  @media screen and (min-width: 1300px) {
+    section {
+      padding: 150px 0px; } }
+
+a {
+  color: #ffffff;
+  text-decoration: none;
+  -webkit-transition: all ease 0.4s;
+  -moz-transition: all ease 0.4s;
+  -ms-transition: all ease 0.4s;
+  -o-transition: all ease 0.4s;
+  transition: all ease 0.4s; }
+  a:hover {
+    color: #c31432; }
+
+h1, h3 {
+  font-family: "Poiret One", cursive;
+  font-weight: lighter; }
+
+h3 {
+  text-align: center;
+  font-size: 2em; }
+  @media screen and (min-width: 1300px) {
+    h3 {
+      font-size: 4em; } }
+
+h2 {
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  left: 10px;
+  top: 10px;
+  font-size: 3em;
+  color: #f9f9f9;
+  z-index: 0;
+  text-transform: uppercase; }
+  @media screen and (min-width: 1300px) {
+    h2 {
+      font-size: 10em;
+      left: 50px;
+      top: 20px; } }
+
+.button {
+  display: inline-block;
+  color: #ffffff;
+  background: transparent;
+  border: 2px solid #ffffff;
+  padding: 15px;
+  -webkit-transition: all ease 0.4s;
+  -moz-transition: all ease 0.4s;
+  -ms-transition: all ease 0.4s;
+  -o-transition: all ease 0.4s;
+  transition: all ease 0.4s; }
+  .button:hover {
+    border: 2px solid #c31432;
+    cursor: pointer; }
+  .button:focus {
+    outline: none; }
+  .button:active {
+    background: #c31432; }
+
+.container {
+  margin: auto;
+  width: 100%;
+  max-width: 1300px;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.container-full {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.section-content {
+  width: 100%; }
+
+.section-header {
+  width: 100%;
+  text-align: center;
+  margin-top: 50px;
+  margin-bottom: 50px; }
+  @media screen and (min-width: 1300px) {
+    .section-header {
+      margin-top: 100px; } }
+
+.button-dark {
+  border-color: #000000;
+  color: #000; }
+
+.nav-icon {
+  height: 60px;
+  width: 60px;
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 10001;
+  cursor: pointer;
+  padding: 20px 10px; }
+  @media screen and (min-width: 1300px) {
+    .nav-icon {
+      top: 50px;
+      left: 50px; } }
+  .nav-icon:hover .nav-icon__line {
+    background: #F1C40F; }
+  .nav-icon:active .nav-icon__line {
+    background: #c31432; }
+  .nav-icon__line {
+    display: block;
+    height: 4px;
+    width: 40px;
+    background-color: #c31432;
+    margin-bottom: 5px;
+    -webkit-transition: all .3s ease;
+    -moz-transition: all .3s ease;
+    -ms-transition: all .3s ease;
+    -o-transition: all .3s ease;
+    transition: all .3s ease; }
+    .nav-icon__line__left {
+      width: 55%; }
+    .nav-icon__line__right {
+      width: 55%;
+      margin-left: 45%; }
+
+.up-bar-change {
+  -webkit-transform: translateY(10px) rotate(45deg);
+  -moz-transform: translateY(10px) rotate(45deg);
+  -ms-transform: translateY(10px) rotate(45deg);
+  -o-transform: translateY(10px) rotate(45deg);
+  transform: translateY(10px) rotate(45deg); }
+
+.nav-icon-active-2 {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -ms-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg); }
+
+.nav-icon-active {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg); }
+
+.nav-icon-inactive {
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg); }
+
+.nav-active {
+  display: flex; }
+
+.nav-inactive {
+  display: none; }
+
+.navbar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.95);
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100vh;
+  width: 100%;
+  z-index: 10000;
+  color: #ffffff;
+  opacity: 0;
+  -webkit-transition: all ease 0.5s;
+  -moz-transition: all ease 0.5s;
+  -ms-transition: all ease 0.5s;
+  -o-transition: all ease 0.5s;
+  transition: all ease 0.5s;
+  -webkit-transform: translate(-100%, 0%);
+  -moz-transform: translate(-100%, 0%);
+  -ms-transform: translate(-100%, 0%);
+  -o-transform: translate(-100%, 0%);
+  transform: translate(-100%, 0%); }
+  .navbar.opened {
+    -webkit-transform: translate(0%, 0%);
+    -moz-transform: translate(0%, 0%);
+    -ms-transform: translate(0%, 0%);
+    -o-transform: translate(0%, 0%);
+    transform: translate(0%, 0%);
+    opacity: 1; }
+  .navbar .nav-content {
+    height: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    z-index: 4; }
+  .navbar .navbar-brand span {
+    font-family: 'Megrim', cursive;
+    letter-spacing: 2px; }
+  .navbar .navbar-nav {
+    font-weight: bold;
+    letter-spacing: 1px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    list-style-type: none;
+    padding: 5px; }
+    @media screen and (orientation: landscape) {
+      .navbar .navbar-nav {
+        flex-direction: row; } }
+    @media screen and (min-width: 1300px) {
+      .navbar .navbar-nav {
+        flex-direction: row; } }
+    .navbar .navbar-nav .nav-item {
+      padding: 10px 0px;
+      margin: 10px;
+      font-size: 1.5em;
+      opacity: 0;
+      position: relative;
+      -webkit-transition: all ease 1.8s;
+      -moz-transition: all ease 1.8s;
+      -ms-transition: all ease 1.8s;
+      -o-transition: all ease 1.8s;
+      transition: all ease 1.8s; }
+      @media screen and (min-width: 1300px) {
+        .navbar .navbar-nav .nav-item {
+          padding: 10px 0px;
+          margin: 30px;
+          font-size: 2em; } }
+      .navbar .navbar-nav .nav-item .active {
+        color: #F1C40F; }
+      .navbar .navbar-nav .nav-item:after {
+        display: block;
+        content: '';
+        margin-top: 5px;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 0;
+        height: 2px;
+        background-color: #F1C40F;
+        transition: 0.4s; }
+      .navbar .navbar-nav .nav-item .nav-link {
+        -webkit-transition: all ease 0.3s;
+        -moz-transition: all ease 0.3s;
+        -ms-transition: all ease 0.3s;
+        -o-transition: all ease 0.3s;
+        transition: all ease 0.3s; }
+      .navbar .navbar-nav .nav-item:hover .nav-link {
+        color: #ffffff; }
+      .navbar .navbar-nav .nav-item:hover:after {
+        width: 100%; }
+  .navbar.opened .navbar-nav .nav-item {
+    opacity: 1; }
+    .navbar.opened .navbar-nav .nav-item:nth-child(1) {
+      transition-delay: 0.6s; }
+    .navbar.opened .navbar-nav .nav-item:nth-child(2) {
+      transition-delay: 0.7s; }
+    .navbar.opened .navbar-nav .nav-item:nth-child(3) {
+      transition-delay: 0.8s; }
+    .navbar.opened .navbar-nav .nav-item:nth-child(4) {
+      transition-delay: 0.9s; }
+    .navbar.opened .navbar-nav .nav-item:nth-child(5) {
+      transition-delay: 1s; }
+
+.header {
+  width: 100%; }
+
+.subpage-main {
+  flex-direction: column;
+  padding: 20px 10px; }
+  .subpage-main--react-gallery {
+    background: #F6F6F6; }
+  @media screen and (min-width: 1300px) {
+    .subpage-main {
+      padding: 100px 10px; } }
+  .subpage-main img {
+    padding: 10px;
+    width: 100%;
+    margin-bottom: 50px; }
+  .subpage-main a {
+    margin: 5px; }
+  .subpage-main .button {
+    min-width: 100px; }
+  .subpage-main .year {
+    margin-top: 0;
+    margin-bottom: 20px;
+    font-size: 1.5em;
+    color: #c8c8c8;
+    font-weight: bold; }
+    @media screen and (min-width: 1300px) {
+      .subpage-main .year {
+        font-size: 3em; } }
+  .subpage-main__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    text-align: center; }
+  .subpage-main__buttons {
+    margin: 40px 10px; }
+  .subpage-main__arrow {
+    font-size: 3em;
+    justify-self: flex-end;
+    padding: 20px 10px; }
+  .subpage-main .container {
+    flex-direction: column; }
+
+.subpage-header {
+  position: relative;
+  min-height: 50vh;
+  width: 100%;
+  letter-spacing: 1px; }
+  .subpage-header--all-projects {
+    background: url("./img/g-header-bg.jpg");
+    -webkit-background-size: auto 60%;
+    background-size: auto 120%;
+    background-repeat: no-repeat;
+    background-position: 50% 0px;
+    background-attachment: fixed; }
+    @media screen and (min-width: 1300px) {
+      .subpage-header--all-projects {
+        -webkit-background-size: cover;
+        background-size: cover; } }
+  @media screen and (min-width: 1300px) {
+    .subpage-header {
+      justify-content: flex-start; } }
+  .subpage-header:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 30%;
+    height: 100%;
+    background: #000; }
+  .subpage-header__title {
+    max-width: 100%;
+    position: absolute;
+    padding: 10px 40px;
+    margin: 10px;
+    border: 1px solid #ffffff;
+    background: rgba(0, 0, 0, 0.9);
+    animation: 1s ease-out 0s 1 fadeIn; }
+    @media screen and (min-width: 1300px) {
+      .subpage-header__title {
+        padding: 40px 90px;
+        left: 20%;
+        bottom: 20px;
+        max-width: 50%; } }
+    .subpage-header__title::before, .subpage-header__title::after {
+      content: '';
+      position: absolute;
+      top: 0;
+      bottom: 0;
+      left: 0;
+      right: 0;
+      margin: -20px;
+      box-shadow: inset 0 0 0 4px #c31432; }
+    .subpage-header__title::after {
+      -webkit-clip-path: polygon(0px 0px, 60px 0px, 60px 60px, 0px 60px);
+      clip-path: polygon(0px 0px, 60px 0px, 60px 60px, 0px 60px); }
+    .subpage-header__title::before {
+      animation-delay: -4s;
+      -webkit-clip-path: polygon(calc(100% - 60px) calc(100% - 60px), 100% calc(100% - 60px), 100% 100%, calc(100% - 60px) 100%);
+      clip-path: polygon(calc(100% - 60px) calc(100% - 60px), 100% calc(100% - 60px), 100% 100%, calc(100% - 60px) 100%); }
+    .subpage-header__title h1 {
+      font-size: 2em;
+      text-shadow: 1px 1px 1px #000;
+      color: #ffffff;
+      margin: 0px;
+      opacity: 1;
+      animation: 2s ease-out 0s 1 fadeInFromTop; }
+      @media screen and (min-width: 1300px) {
+        .subpage-header__title h1 {
+          font-size: 7em; } }
+    @media screen and (min-width: 1300px) {
+      .subpage-header__title .subpage-title--pixijs {
+        font-size: 5em; } }
+    .subpage-header__title p {
+      color: rgba(255, 255, 255, 0.2);
+      margin-top: 10px;
+      text-align: right; }
+
+.technologies {
+  color: grey;
+  font-size: .8em; }
+
+footer {
+  background: #000;
+  color: #ffffff;
+  padding: 10px; }
+  footer .link-section {
+    margin: 30px 10px;
+    font-size: 4em;
+    text-align: center;
+    padding: 10px; }
+    footer .link-section a {
+      margin: 10px; }
+  footer .copyright {
+    text-align: right; }
 
 /*# sourceMappingURL=index.css.map */
