--- a/src/ReactGallery.css
+++ b/src/ReactGallery.css
@@ -8,20 +8,24 @@
   .ReactGallery__content {
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap; }
   .ReactGallery__item {
     position: relative;
-    min-width: 300px;
-    max-width: calc(25% - 20px);
+    min-width: 400px;
+    flex: 2;
     max-height: 250px;
     overflow: hidden;
     margin: 10px;
     font-family: "Montserrat", sans-serif;
     animation: galleryItemFadeIn .5s; }
+    @media screen and (max-width: 450px) {
+      .ReactGallery__item {
+        min-width: calc(100% - 10px); } }
     .ReactGallery__item img {
-      width: 120%; }
+      width: 150%;
+      margin-left: -20%; }
   .ReactGallery__filter {
     display: flex;
     flex-wrap: wrap;
@@ -40,23 +44,45 @@
     @media screen and (min-width: 1300px) {
       .ReactGallery__filter-header {
         width: auto; } }
-  .ReactGallery .ReactGallery-item__title {
+  .ReactGallery .ReactGallery-item__text {
     position: absolute;
     top: 0;
     left: 0;
-    margin: 20px;
+    bottom: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
+    -webkit-transition: all ease-in 0.5s;
+    -moz-transition: all ease-in 0.5s;
+    -ms-transition: all ease-in 0.5s;
+    -o-transition: all ease-in 0.5s;
+    transition: all ease-in 0.5s; }
+    .ReactGallery .ReactGallery-item__text:hover {
+      background: rgba(0, 0, 0, 0.81); }
+      .ReactGallery .ReactGallery-item__text:hover .ReactGallery-item__details, .ReactGallery .ReactGallery-item__text:hover .ReactGallery-item__description {
+        opacity: 1; }
+  .ReactGallery .ReactGallery-item__title {
     font-size: 2rem;
     z-index: 100;
     color: white;
-    font-family: "Poiret One", cursive; }
+    font-family: "Poiret One", cursive;
+    margin: 0px 0px 10px 0px; }
+  .ReactGallery .ReactGallery-item__description {
+    color: white;
+    opacity: 0;
+    text-align: justify;
+    -webkit-transition: all ease-in 0.5s;
+    -moz-transition: all ease-in 0.5s;
+    -ms-transition: all ease-in 0.5s;
+    -o-transition: all ease-in 0.5s;
+    transition: all ease-in 0.5s; }
   .ReactGallery .ReactGallery-item__details {
     opacity: 0;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.81);
+    align-self: flex-end;
+    justify-self: flex-end;
+    text-align: right;
     padding: 10px;
     -webkit-transition: all ease-in 0.5s;
     -moz-transition: all ease-in 0.5s;
@@ -65,11 +91,6 @@
     transition: all ease-in 0.5s; }
     .ReactGallery .ReactGallery-item__details:hover {
       opacity: 1; }
-    .ReactGallery .ReactGallery-item__details .button {
-      position: absolute;
-      bottom: 0;
-      right: 0;
-      margin: 10px; }
 
 @keyframes galleryItemFadeIn {
   from {
