--- a/src/ReactGallery.scss
+++ b/src/ReactGallery.scss
@@ -22,22 +22,32 @@ $media-desktop: "screen and (min-width : 1300px)";
   &__content {
     width: 100%;
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
   }
   &__item {
+    @media screen and (max-width: 450px) {
+      min-width: calc(100% - 10px);
+    }
     position: relative;
-    min-width: 300px;
-    max-width: calc(25% - 20px);
+    min-width: 400px;
+    flex: 2;
+    //max-width: calc(25% - 20px);
     max-height: 250px;
     overflow: hidden;
     margin: $item-padding;
     font-family: $default-gallery-font;
 
     animation: galleryItemFadeIn .5s;
+    //@for $i from 1 through 10 {
+    //  &:nth-child(#{$i}n) {
+    //    animation-delay: #{$i * 0.02}s;
+    //  }
+    //}
     img {
-      width: 120%;
+      width: 150%;
+      margin-left: -20%;
     }
 
   }
@@ -63,24 +73,45 @@ $media-desktop: "screen and (min-width : 1300px)";
     }
   }
   .ReactGallery-item {
-    &__title {
+    &__text {
       position: absolute;
       top: 0;
       left: 0;
-      margin: $item-padding * 2;
+      bottom: 0;
+      right: 0;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      padding: $item-padding * 2;
+
+      @include transition-ease-in(.5s);
+
+      &:hover {
+        background: rgba(0, 0, 0, 0.81);
+        .ReactGallery-item__details, .ReactGallery-item__description {
+          opacity: 1;
+        }
+      }
+    }
+    &__title {
       font-size: 2rem;
       z-index: 100;
-      color: rgb(255, 255, 255);
+      color: white;
       font-family: $header-gallery-font;
+      margin: 0px 0px 10px 0px;
+    }
+    &__description {
+      color: white;
+      opacity: 0;
+      text-align: justify;
+      @include transition-ease-in(.5s);
+
     }
     &__details {
       opacity: 0;
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      background: rgba(0, 0, 0, 0.81);
+      align-self: flex-end;
+      justify-self: flex-end;
+      text-align: right;
       padding: $item-padding;
       @include transition-ease-in(.5s);
 
@@ -88,10 +119,6 @@ $media-desktop: "screen and (min-width : 1300px)";
         opacity: 1;
       }
       .button {
-        position: absolute;
-        bottom: 0;
-        right: 0;
-        margin: $item-padding;
       }
     }
   }
